# lattice

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  book.toml  deny.toml  justfile
.claude/: CLAUDE.md
.claude/commands/: verify.md
.claude/roles/: adversary.md
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci-client.yml  ci.yml  dependabot-auto-merge.yml  docs.yml  full-tests.yml  release.yml
config/: minimal.yaml  production.yaml
crates/hpc-scheduler-core/: Cargo.toml  README.md
crates/hpc-scheduler-core/src/: conformance.rs  cost.rs  knapsack.rs  lib.rs  placement.rs  preemption.rs  resource_timeline.rs  topology.rs  traits.rs  types.rs  walltime.rs
crates/lattice-acceptance/: Cargo.toml
crates/lattice-acceptance/features/: allocation_dispatch.feature  allocation_lifecycle.feature  autoscaling.feature  backup_restore.feature  budget_tracking.feature  cert_rotation.feature  cgroup_isolation.feature  checkpoint.feature  cli_authentication.feature  conformance.feature  cross_context.feature  dag_workflow.feature  data_staging.feature  dispatch_cross_cutting.feature  failure_modes.feature  federation.feature  gpu_topology.feature  identity_cascade.feature  medical_workload.feature  memory_topology.feature  mpi_process_management.feature  network_domains.feature  node_agent.feature  node_lifecycle.feature  observability.feature  operational_validation.feature  preemption.feature  quota_enforcement.feature  rbac_authorization.feature  scheduling_cycle.feature  secret_resolution.feature  sensitive_workload.feature  session_management.feature  software_delivery.feature  software_delivery_invariants.md  streaming_telemetry.feature  tenant_management.feature  walltime_enforcement.feature
crates/lattice-acceptance/tests/: acceptance.rs  chaos.rs
crates/lattice-acceptance/tests/steps/: allocation.rs  autoscaling.rs  backup.rs  budget_tracking.rs  cgroup_steps.rs  checkpoint.rs  common.rs  conformance.rs  cross_context.rs  dag.rs  data_staging.rs  dispatch.rs  failure_modes.rs  federation.rs  gpu_topology.rs  helpers.rs  identity.rs  memory_topology.rs  mod.rs  mpi.rs  network.rs  node_agent.rs  node_lifecycle.rs  observability.rs  preemption.rs  quota.rs  rbac.rs  scheduling.rs  sensitive.rs  session.rs  software_delivery.rs  streaming.rs  tenant.rs  walltime.rs
crates/lattice-api/: Cargo.toml
crates/lattice-api/src/: convert.rs  diagnostics.rs  dispatcher.rs  events.rs  lib.rs  main.rs  mpi.rs  rest.rs  server.rs  state.rs
crates/lattice-api/src/grpc/: admin_service.rs  allocation_service.rs  mod.rs  node_service.rs
crates/lattice-api/src/middleware/: cert_san.rs  mod.rs  oidc.rs  rate_limit.rs  rbac.rs
crates/lattice-api/tests/: e2e.rs  integration.rs
crates/lattice-checkpoint/: Cargo.toml
crates/lattice-checkpoint/src/: broker.rs  cost_model.rs  lib.rs  loop_runner.rs  policy.rs  protocol.rs
crates/lattice-checkpoint/tests/: integration.rs
crates/lattice-cli/: Cargo.toml
crates/lattice-cli/src/: client.rs  compat.rs  completions.rs  config_file.rs  convert.rs  lib.rs  main.rs  output.rs
crates/lattice-cli/src/commands/: admin.rs  attach.rs  auth.rs  cancel.rs  dag.rs  diag.rs  logs.rs  mod.rs  nodes.rs  session.rs  status.rs  submit.rs  top.rs  uenv.rs  usage.rs  watch.rs
crates/lattice-cli/tests/: integration.rs
crates/lattice-client/: Cargo.toml  README.md
crates/lattice-client/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs
crates/lattice-common/: Cargo.toml  build.rs
crates/lattice-common/proptest-regressions/: types.txt
crates/lattice-common/src/: config.rs  error.rs  lib.rs  metrics.rs  proto.rs  registry.rs  scheduler_core_impls.rs  traits.rs  tsdb_client.rs  types.rs  uenv_metadata.rs
crates/lattice-common/src/clients/: mod.rs  openchamj.rs  sovra.rs  vast.rs  waldur.rs
crates/lattice-common/src/secrets/: backends.rs  errors.rs  mod.rs  resolver.rs  value.rs  vault_tests.rs
crates/lattice-common/tests/: integration.rs  registry_e2e.rs
crates/lattice-node-agent/: Cargo.toml
crates/lattice-node-agent/src/: agent.rs  allocation_runner.rs  attach.rs  cgroup.rs  checkpoint_handler.rs  conformance.rs  data_stage.rs  epilogue.rs  grpc_client.rs  grpc_server.rs  health.rs  heartbeat.rs  heartbeat_loop.rs  image_cache.rs  image_stager.rs  lib.rs  liveness.rs  main.rs  network.rs  probe_manager.rs  process_launcher.rs  prologue.rs  pty.rs  reattach.rs  signal.rs  state.rs  telemetry.rs
crates/lattice-node-agent/src/identity/: bootstrap.rs  mod.rs  rotator.rs  self_signed.rs  spire.rs
crates/lattice-node-agent/src/pmi2/: fence.rs  kvs.rs  mod.rs  protocol.rs  server.rs
crates/lattice-node-agent/src/runtime/: bare_process.rs  dmtcp.rs  mock.rs  mod.rs  podman.rs  sarus.rs  uenv.rs
crates/lattice-node-agent/src/telemetry/: aya_collector.rs  ebpf_stubs.rs  gpu_discovery.rs  log_buffer.rs  memory_discovery.rs  mod.rs  proc_collector.rs
crates/lattice-node-agent/tests/: integration.rs
crates/lattice-quorum/: Cargo.toml  build.rs
crates/lattice-quorum/src/: backup.rs  client.rs  commands.rs  global_state.rs  lib.rs  log_store_variant.rs  network.rs  persistent_store.rs  state_machine.rs  store.rs  transport.rs  transport_server.rs
crates/lattice-quorum/tests/: contracts.rs  integration.rs
crates/lattice-scheduler/: Cargo.toml
crates/lattice-test-harness/: Cargo.toml
crates/lattice-test-harness/src/: assertions.rs  fixtures.rs  lib.rs  mocks.rs  quota_store.rs
docs/: README.md  SUMMARY.md
docs/architecture/: accounting.md  api-design.md  autoscaling.md  checkpoint-broker.md  cli-design.md  conformance.md  dag-scheduling.md  data-plane.md  (+24 more)
examples/: README.md
proto/: README.md
scripts/: clippy-linux.sh  gcp-deploy.sh  gcp-test.sh  set-version.sh
sdk/python/: README.md  pyproject.toml
sdk/python/lattice_sdk/: __init__.py  client.py  types.py
sdk/python/tests/: __init__.py  test_client.py
specs/: assumptions.md  domain-model.md  failure-modes.md  features  invariants.md  ubiquitous-language.md
tools/rm-replay/: Cargo.toml
tools/rm-replay/src/: main.rs
(+185 files in other folders)
