[workspace]
resolver = "2"
members = [
    "crates/lattice-common",
    "crates/lattice-quorum",
    "crates/lattice-scheduler",
    "crates/lattice-node-agent",
    "crates/lattice-api",
    "crates/lattice-cli",
    "crates/lattice-checkpoint",
    "crates/lattice-test-harness",
    "crates/lattice-acceptance",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lattice-scheduler/lattice"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC / Protobuf
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# Raft consensus
openraft = "0.10.0-alpha.14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# HTTP (for REST gateway, storage API integration)
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7"

# Testing
proptest = "1"
tokio-test = "0.4"
cucumber = "0.22"
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
