[workspace]
resolver = "2"
members = [
    "crates/lattice-common",
    "crates/lattice-quorum",
    "crates/lattice-scheduler",
    "crates/lattice-node-agent",
    "crates/lattice-api",
    "crates/lattice-cli",
    "crates/lattice-checkpoint",
    "crates/lattice-test-harness",
    "crates/lattice-acceptance",
    "crates/hpc-scheduler-core",
]

[workspace.package]
version = "2026.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/witlox/lattice"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC / Protobuf
tonic = { version = "0.14", features = ["tls-ring", "channel", "transport"] }
prost = "0.14"
prost-types = "0.14"
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tokio-stream = "0.1"

# Raft consensus
openraft = { version = "0.10.0-alpha.14", features = ["serde"] }
raft-hpc-core = "2026.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.15"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# HTTP (for REST gateway, storage API integration)
reqwest = { version = "0.13", features = ["json", "query"] }
axum = "0.8"

# JWT / OIDC
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }

# Metrics
prometheus = "0.14"

# GPU discovery (optional)
nvml-wrapper = "0.12"

# Hex encoding (CXI credentials)
hex = "0.4"

# Ed25519 signing (audit log)
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# Test cert generation
rcgen = "0.14"

# Testing
proptest = "1"
tokio-test = "0.4"
cucumber = "0.22"
wiremock = "0.6"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
