[package]
name = "hpc-scheduler-core"
version = "2026.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Core scheduling algorithms for HPC job schedulers: multi-dimensional knapsack solver, composite cost function, topology-aware placement, reservation-based backfill, conformance grouping, preemption, and walltime enforcement."
readme = "README.md"
repository = "https://github.com/witlox/lattice"
keywords = ["hpc", "scheduler", "knapsack", "backfill", "slurm"]
categories = ["algorithms", "science"]

[dependencies]
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde", "chrono/serde", "uuid/serde"]

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
