[package]
name = "lattice-acceptance"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BDD acceptance tests for Lattice scheduler"
publish = false

[[test]]
name = "acceptance"
harness = false

[dependencies]
lattice-common = { path = "../lattice-common" }
lattice-test-harness = { path = "../lattice-test-harness" }
cucumber = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
futures = "0.3"
