[package]
name = "lattice-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lattice-common = { path = "../lattice-common" }
tokio = { workspace = true }
tokio-stream = "0.1"
tonic = { workspace = true }
prost = { workspace = true }
prost-types = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
tower = "0.5"

[dev-dependencies]
tokio-test = { workspace = true }
lattice-test-harness = { path = "../lattice-test-harness" }
