[package]
name = "lattice-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lattice-server"
path = "src/main.rs"

[features]
default = []
oidc = []
federation = ["lattice-common/federation"]
accounting = ["lattice-common/accounting"]

[dependencies]
lattice-common = { path = "../lattice-common" }
lattice-node-agent = { path = "../lattice-node-agent" }
lattice-quorum = { path = "../lattice-quorum" }
lattice-checkpoint = { path = "../lattice-checkpoint" }
lattice-scheduler = { path = "../lattice-scheduler" }
lattice-test-harness = { path = "../lattice-test-harness" }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = "0.14"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
tower = "0.5"
clap = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
prometheus = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
lattice-test-harness = { path = "../lattice-test-harness" }
lattice-scheduler = { path = "../lattice-scheduler" }
lattice-checkpoint = { path = "../lattice-checkpoint" }
chrono = { workspace = true }
wiremock = { workspace = true }
rcgen = { workspace = true }
tempfile = { workspace = true }
serde_yaml = { workspace = true }
base64 = "0.22"
