[package]
name = "lattice-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lattice"
path = "src/main.rs"

[dependencies]
lattice-common = { path = "../lattice-common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
clap_complete = "4"
toml = "0.9"
dirs = "6"

[dev-dependencies]
tokio-test = { workspace = true }
