[package]
name = "lattice-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lattice"
path = "src/main.rs"

[dependencies]
lattice-common = { path = "../lattice-common" }
lattice-client = { path = "../lattice-client" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
toml = "1.1"
dirs = "6"
hpc-auth = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
