[package]
name = "lattice-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, configuration, and error handling for Lattice scheduler"

[features]
default = []
federation = []
accounting = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
config = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
