[package]
name = "lattice-node-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lattice-common = { path = "../lattice-common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
tokio-test = { workspace = true }
lattice-test-harness = { path = "../lattice-test-harness" }
