[package]
name = "lattice-node-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lattice-agent"
path = "src/main.rs"

[dependencies]
lattice-common = { path = "../lattice-common" }
lattice-test-harness = { path = "../lattice-test-harness" }
clap = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio-stream = "0.1"
sha2 = "0.10"

[features]
default = []
nvidia = ["dep:nvml-wrapper"]

[dependencies.nvml-wrapper]
workspace = true
optional = true

[dev-dependencies]
tokio-test = { workspace = true }
lattice-test-harness = { path = "../lattice-test-harness" }
