[package]
name = "lattice-node-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lattice-agent"
path = "src/main.rs"

[dependencies]
lattice-common = { path = "../lattice-common" }
lattice-test-harness = { path = "../lattice-test-harness" }
clap = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio-stream = "0.1"
sha2 = "0.11"
hex = { workspace = true }
hpc-node = { workspace = true }
hpc-identity = { workspace = true }
hpc-audit = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
nvidia = ["dep:nvml-wrapper"]
rocm = []
ebpf = ["dep:aya", "dep:bytes"]

[dependencies.nvml-wrapper]
workspace = true
optional = true

[dependencies.aya]
version = "0.13"
optional = true

[dependencies.bytes]
version = "1"
optional = true

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
lattice-test-harness = { path = "../lattice-test-harness" }
