[package]
name = "lattice-quorum"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lattice-common = { path = "../lattice-common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
openraft = { workspace = true }
async-trait = { workspace = true }
tokio-stream = "0.1"
futures = "0.3"

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
lattice-test-harness = { path = "../lattice-test-harness" }
