[package]
name = "lattice-quorum"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lattice-common = { path = "../lattice-common" }
raft-hpc-core = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
openraft = { workspace = true }
async-trait = { workspace = true }
tokio-stream = "0.1"
futures = "0.3"
sha2 = "0.10"
ed25519-dalek = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
lattice-test-harness = { path = "../lattice-test-harness" }
hpc-audit = { workspace = true }
