[package]
name = "lattice-test-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared test fixtures, mocks, and assertion helpers for Lattice"
publish = false

[dependencies]
lattice-common = { path = "../lattice-common" }
hpc-audit = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
