[workspace]

[package]
name = "rm-replay"
version = "2026.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

lattice-common = { path = "../../crates/lattice-common" }
lattice-scheduler = { path = "../../crates/lattice-scheduler" }
